...
                        Text("")
                    }
                    MultilineTextView(text: $descriptionText, placeholderText: "Add your feedback here...").frame(numLines: 15)
                }
                Spacer()
            }.padding()
            .navigationBarTitle("Give Feedback")
            .navigationBarItems(leading: cancelButton, trailing: sendButton)
            .sheet(isPresented: $showSheet) {
                if self.activeSheet == .loginSheet {
                    NavigationView {
                        LoginView(finishLoggingIn: self.$showSendFeedbackView)
                    }.environmentObject(self.model)
...
            Text("Cancel")
        }
    }
    
    private var sendButton : some View {
        Button(action: share) {
            Text("Send").bold()
        }
    }
    
    private func cancel() {
        PrototyperController.dismissView()
        PrototyperController.isFeedbackButtonHidden = false
...
