...
            static let withoutLoginText = "TUM-ID/E-Mail"
            static let withLoginText = "Enter your name"
        }
        
        enum SubButtonText {
            static let withoutLoginText = "Continue without login"
            static let withLoginText = "Continue with login"
        }
        
        enum DescrpitionText {
            static let withoutLoginText = "Enter a name"
            static let withLoginText = "Please log in using your Prototyper/TUM credentials to send feedback"
        }
        
        enum ContinueButtonText {
            static let withoutLoginText = "Continue"
            static let withLoginText = "Login"
        }
        
        static let alertText = "Could not log in! Please check your login credentials and try again."
    }
    
...
