...
    // MARK: Constants
    /// The Constants to be used to display the action sheet that is presented when pressing the feedback bubble
    private enum Constants {
        enum FeedbackActionSheet {
            static let title: String? = nil
            static let text: String? = nil
            static let writeFeedback = "Give feedback"
            static let shareApp = "Share app"
            static let hideFeedbackBubble = "Hide this button"
            static let cancel = "Cancel"
        }
    }
    
...
